# civ-ipos-sessions

./: .gitignore  LICENSE  README.md  index.html  sales_data.csv  sales_data_v2.csv  test.txt
assessments/: final-project-faq.md  part1-intructions.md  readme.md
org/: code-style-guide.md  onboarding.md
resources/: 03-Widget List.ipynb  fix_pycharm_debugger.py
week1/: 03-Widget List.ipynb  in_class_activity.md  lesson_outline.md  week1_activities.py
week1/OOP_example/: abstraction.py  bottle_of_beer_cooper.py  encapsulation.py  inheritance.py  main.py  polymorphism.py
week1/bottles_of_beer/: bottles_of_beer.py  bottles_of_beer_function.py  bottles_of_beer_modularisation.py  (+1 more)
week11/: lesson_outline.md
week12/: RECORD  pip_freeze_cheatsheet.md  pip_install_cheatsheet.md  pyproject.toml  requirements.txt
week12/activities/flask_tic_tac_toe_start/: app.py
week12/in-class-demos/: RECORD  git_revert.md  metadata.json  project_structure.txt
week14/activity_examples/civ-ipos-github-activity-main-poetry/: pyproject.toml  setup.py
week15/: lesson_outline.md
week2/: lesson_outline.md  pizza-class-diagram.md  tic_tac_o_oh.py  tic_tac_o_oh_refeactored.py
week3/: in_class_demos.py  lesson.md  look_up_table.py
week4/: lesson_outline.md  mock_contact.py  mock_weather_api.py  readme.md
week5/: example.txt  in-class-demos.py
week6/: challenge_1.py  lesson_outline.md
week7/: doc_revision.py  lesson_outline.md  pdb_examples.py  print_debugging.py  working_with_repr.py
week8/: lesson_outline.md
week9/: lesson_outline.md  really_long_not_pep8.py
(+336 files in other folders)
