[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.poetry]
name = "my_package"
version = "0.1"
description = "A simple package example"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
homepage = "https://github.com/yourusername/my_package"

[tool.poetry.dependencies]
python = "^3.6"
# Add dependencies here, for example:
# numpy = ">=1.19.5"
# matplotlib = ">=3.4.3"
# requests = ">=2.26.0"
# scikit-learn = ">=0.24.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
my_script = 'my_package.module:function'

[tool.poetry.plugins."poetry-dynamic-versioning"]
version-file = "src/my_package/version.py"
